# GLASS

./: .editorconfig  .gitignore  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  config.ron  pyproject.toml  python  sync_wgpu.py  tasks.sh
.artifacts/: poc-report.md
.cargo/: config.toml
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.instructions/: architecture.md  project.index.md  raw.tasks.md  tasks.history.md
.instructions/artefacts/: glass-arch-v3_2-PLAN-artefact.md
.instructions/contexts/: project.memory.md
.instructions/tasks/: phase0-06-validation-campaign.md  phase1-01-refactor-overlay.md  phase1-02-retained-scene-text.md  phase1-03-config-hotreload.md  phase1-04-hdr-dpi-diagnostics.md  phase2-01-input-modes.md  phase3-01-modules-config-window.md  phase4-01-beta-testing.md  phase5-01-signing-release.md
.instructions/tasks.archive/: phase0-01-scaffolding.md  phase0-02-wgpu-dcomp-spike.md  phase0-03-triangle-render.md  phase0-04-passthrough-window.md  phase0-05-allocation-tracking.md  phase0-07-poc-report.md
.instructions/tests/: python-shim.test.sh
docs/: GENERICITY_AUDIT.md  getting-started.md  index.md  library-consumer.md  module-authoring.md
docs/architecture/: ARCHITECTURE.md  composition-pipeline.md  config-system.md  decisions.md  input-system.md  module-system.md  safety-system.md  scene-graph.md
glass-core/: Cargo.toml
glass-core/src/: error.rs  lib.rs
glass-overlay/: Cargo.toml  EXTRACTED_TEMP_PROVIDERS.rs.bak
glass-overlay/src/: compositor.rs  config.rs  diagnostics.rs  hdr.rs  input.rs  layout.rs  lib.rs  overlay_window.rs  renderer.rs  safety.rs  scene.rs  test_mode.rs  text_renderer.rs
glass-overlay/src/modules/: clock.rs  fps_counter.rs  mod.rs  system_stats.rs
glass-overlay/tests/: integration_lifecycle.rs
glass-poc/: Cargo.toml
glass-poc/examples/: minimal.rs
glass-poc/src/: alloc_tracker.rs  compositor.rs  main.rs  overlay_window.rs  renderer.rs  test_mode.rs
glass-starter/: Cargo.toml
glass-starter/examples/: minimal.rs
glass-starter/src/: alloc_tracker.rs  main.rs
src/glass_ultimateoverlay/: __init__.py
