[workspace]
resolver = "2"
members = [
    "glass-core",
    "glass-overlay",
    "glass-starter",
]
exclude = [
    "third_party/wgpu",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "A GPU-accelerated, transparent Windows overlay framework built on DirectComposition and wgpu/DX12"
homepage = "https://github.com/RomainROCH/GLASS-UltimateOverlay"
repository = "https://github.com/RomainROCH/GLASS-UltimateOverlay"
keywords = ["overlay", "wgpu", "directcomposition", "windows", "dx12"]
categories = ["graphics", "gui", "rendering", "game-development"]

[workspace.dependencies]
# Rendering — DX12 only
wgpu = { version = "24", features = ["dx12"] }

# Windows APIs (DirectComposition, DWM, Win32)
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Services",
    "Win32_Security",
] }

# Window handle interop
raw-window-handle = "0.6"

# Tracing + Tracy profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = "0.11"

# Async blocking (for wgpu init)
pollster = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Config serialization + hot-reload
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.9"
toml = "0.8"
arc-swap = "1"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

# Text rendering
glyphon = "0.8"

# System metrics (CPU/memory)
sysinfo = "0.33"

# Time formatting
chrono = "0.4"

# ── Local patches ────────────────────────────────────────────
# wgpu-hal 24.0.4 hardcodes Opaque alpha and DXGI_ALPHA_MODE_IGNORE.
# Our fork in third_party/wgpu adds PreMultiplied support for
# DirectComposition / SurfaceHandle / SwapChainPanel targets.
#
# wgpu-types must also be patched so that wgpu-hal (which resolves
# wgpu-types via its workspace) and wgpu-core (from crates.io) use
# the exact same wgpu-types crate — avoiding duplicate type errors.
[patch.crates-io]
wgpu-hal   = { path = "third_party/wgpu/wgpu-hal" }
wgpu-types = { path = "third_party/wgpu/wgpu-types" }
naga       = { path = "third_party/wgpu/naga" }
