[package]
name = "glass-overlay"
version = "0.1.0"
edition.workspace = true

[features]
default = []
# Test build mode: renders permanent watermark, forces input passthrough,
# enables TRACE-level logging, prepends [MODE TEST] to tray tooltip.
# Used during anti-cheat validation campaigns (see PlanSecurite Phase 0.3).
test_mode = []
# Tracy profiling: opt-in, wires tracing spans into Tracy profiler.
tracy = ["dep:tracing-tracy"]

[dependencies]
glass-core = { path = "../glass-core" }
wgpu = { workspace = true }
windows = { workspace = true }
raw-window-handle = { workspace = true }
tracing = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
glyphon = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
tracing-tracy = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }
