[package]
name = "glass-overlay"
version = "0.1.0"
edition.workspace = true

[features]
default = []
# Test build mode: renders permanent watermark, forces input passthrough,
# enables TRACE-level logging, prepends [MODE TEST] to tray tooltip.
# Used during validation and visual checks.
test_mode = []
# Tracy profiling: opt-in, wires tracing spans into Tracy profiler.
tracy = ["dep:tracing-tracy"]
gaming = []

[dependencies]
glass-core = { path = "../glass-core" }
wgpu = { workspace = true }
windows = { workspace = true }
tracing = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
glyphon = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
tracing-tracy = { workspace = true, optional = true }

[lints.rust]
missing_docs = "warn"
