[package]
name = "glass-overlay"
version = "0.2.0"
edition = "2021"
description = "Lightweight overlay framework for Windows using DirectComposition"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RomainROCH/GLASS"
readme = "../README.md"
keywords = ["overlay", "windows", "directcomposition", "gui", "hud"]
categories = ["gui", "rendering"]
exclude = ["EXTRACTED_TEMP_PROVIDERS.rs.bak"]

[features]
default = []
# Test build mode: renders permanent watermark, forces input passthrough,
# enables TRACE-level logging, prepends [MODE TEST] to tray tooltip.
# Used during validation and visual checks.
test_mode = []
# Tracy profiling: opt-in, wires tracing spans into Tracy profiler.
tracy = ["dep:tracing-tracy"]
gaming = []

[dependencies]
glass-core = { version = "0.2.0", path = "../glass-core" }
wgpu = { workspace = true }
windows = { workspace = true }
tracing = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
glyphon = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
tracing-tracy = { workspace = true, optional = true }

[lints.rust]
missing_docs = "warn"
