[package]
name = "glass-starter"
version = "0.2.0"
edition = "2021"
description = "Minimal example application for the GLASS overlay framework"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RomainROCH/GLASS"
publish = false

[[bin]]
name = "glass-starter"
path = "src/main.rs"

[dependencies]
glass-core = { version = "0.2.0", path = "../glass-core" }
glass-overlay = { version = "0.2.0", path = "../glass-overlay" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true, optional = true }

[features]
default = []
alloc-tracking = []
test_mode = ["glass-overlay/test_mode"]
tracy = ["glass-overlay/tracy", "dep:tracing-tracy"]
gaming = ["glass-core/gaming", "glass-overlay/gaming"]   # Enables anti-cheat detection at startup
